chapter-2/exercise-1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs-svc
spec:
  type: ClusterIP
  selector:
    app: logs-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
